--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "min-bounding-rectangle",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.ts",
+  "type": "commonjs",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "tsc && node build/index.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,11 @@
   "homepage": "https://github.com/mahetoodang/minimum-bounding-rectangle#readme",
   "dependencies": {
     "hull.js": "^1.0.1",
-    "mathjs": "^8.0.1"
+    "mathjs": "11.11.1",
+    "typescript": "^5.2.2"
+  },
+  "devDependencies": {
+    "@types/hull.js": "^1.0.2",
+    "@types/mathjs": "^9.4.2"
   }
 }
