Add exports to package.json

--- a/package.json
+++ b/package.json
@@ -7,6 +7,12 @@
   "files": [
     "dist"
   ],
+  "exports": {
+    ".": {
+      "import": "./dist/cityview.es.js",
+      "require": "./dist/cityview.umd.cjs"
+    }
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
