--- a/package.json
+++ b/package.json
@@ -1,51 +1,87 @@
 {
   "name": "min-bounding-rectangle",
   "version": "1.2.0",
-  "main": "dist/minimum-bounding-rectangle.es.js",
-  "module": "dist/minimum-bounding-rectangle.umd.js",
-  "types": "dist/minimum-bounding-rectangle.d.ts",
+  "type": "module",
+  "module": "dist/min-bounding-rectangle.umd.js",
+  "main": "dist/min-bounding-rectangle.es.js",
+  "types": "dist/min-bounding-rectangle.d.ts",
   "files": [
     "dist"
   ],
   "exports": {
     ".": {
-      "import": "./dist/minimum-bounding-rectangle.es.js",
-      "require": "./dist/minimum-bounding-rectangle.umd.js",
-      "types": "./dist/minimum-bounding-rectangle.d.ts"
+      "types": "./dist/min-bounding-rectangle.d.ts",
+      "import": "./dist/min-bounding-rectangle.es.js",
+      "require": "./dist/min-bounding-rectangle.umd.js"
     }
   },
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "build:size": "npm run build && size-limit",
     "publisher": "npm run build && npm publish",
-    "test": "jest"
+    "test": "vitest",
+    "test:coverage": "vitest run --coverage"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/mahetoodang/minimum-bounding-rectangle.git"
+    "url": "git+https://github.com/mahetoodang/min-bounding-rectangle.git"
   },
   "author": "Herman Aadamsoo",
   "license": "MIT",
+  "keywords": [
+    "bounding box",
+    "bounding rectangle",
+    "min bounding rectangle",
+    "minimum bounding rectangle",
+    "minimal bounding rectangle",
+    "bbox",
+    "mbr",
+    "geometry",
+    "spatial",
+    "geospatial",
+    "gis",
+    "computational geometry",
+    "collision detection",
+    "shape analysis",
+    "2d",
+    "polygon",
+    "envelope",
+    "extent"
+  ],
   "bugs": {
-    "url": "https://github.com/mahetoodang/minimum-bounding-rectangle/issues"
+    "url": "https://github.com/mahetoodang/min-bounding-rectangle/issues"
   },
-  "homepage": "https://github.com/mahetoodang/minimum-bounding-rectangle#readme",
+  "homepage": "https://github.com/mahetoodang/min-bounding-rectangle#readme",
   "dependencies": {
-    "@types/concaveman": "^1.1.6",
-    "concaveman": "^1.2.1",
-    "mathjs": "11.11.1",
-    "typescript": "^5.2.2"
+    "concaveman": "^2.0.0",
+    "mathjs": "^14.6.0"
   },
   "devDependencies": {
-    "@jest/globals": "^29.7.0",
-    "@types/hull.js": "^1.0.2",
-    "@types/jest": "^29.5.14",
-    "@types/mathjs": "^9.4.2",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.2.5",
+    "@size-limit/preset-small-lib": "^11.2.0",
+    "@types/concaveman": "^1.1.6",
+    "@vitest/coverage-v8": "^3.2.4",
+    "prettier": "^3.6.2",
+    "rollup-plugin-visualizer": "^6.0.3",
     "ts-node": "^10.9.2",
-    "vite": "^4.4.9",
-    "vite-plugin-compression2": "^0.10.5",
-    "vite-plugin-dts": "^3.6.0"
-  }
+    "typescript": "^5.9.2",
+    "vite": "^7.1.3",
+    "vite-plugin-compression2": "^2.2.0",
+    "vite-plugin-dts": "^4.5.4",
+    "vitest": "^3.2.4"
+  },
+  "size-limit": [
+    {
+      "name": "ESM Bundle",
+      "path": "dist/min-bounding-rectangle.es.js",
+      "limit": "60 KB",
+      "gzip": true
+    },
+    {
+      "name": "UMD Bundle",
+      "path": "dist/min-bounding-rectangle.umd.js",
+      "limit": "60 KB",
+      "gzip": true
+    }
+  ]
 }
