--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "min-bounding-rectangle",
   "version": "1.2.1",
   "type": "module",
-  "module": "dist/min-bounding-rectangle.umd.js",
-  "main": "dist/min-bounding-rectangle.es.js",
+  "main": "dist/min-bounding-rectangle.umd.js",
+  "module": "dist/min-bounding-rectangle.es.js",
   "types": "dist/min-bounding-rectangle.d.ts",
   "files": [
     "dist"
@@ -17,7 +17,7 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "build:size": "npm run build && size-limit",
     "publisher": "vitest run && npm run build && npm publish",
     "test": "vitest",
