--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,6 @@
 			"es2020"
 		],
 		"declaration": true,
-		/* Linting */
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
 		"noFallthroughCasesInSwitch": true
@@ -25,6 +24,8 @@
 	],
 	"exclude": [
 		"node_modules",
-		"dist"
+		"dist",
+		"**/*.test.ts",
+		"**/*.spec.ts"
 	]
 }
